test/rules/single_criterion/high_risk_service_account/risky_role_exec_into_container/config.json
{
  "description": "Test single criteria rule (risky role exec into container)",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "rejectHostCapabilitiesInteractions": "hostcapabilities_interactions/pod_exec_permissions.yaml",
  "acceptHostCapabilitiesInteractions": "hostcapabilities_interactions/risky_role_exec_into_container.yaml",
  "accept": [
    "deployments/normal.yaml"
  ],
  "reject": [
    "deployments/high_risk_service_account.yaml"
  ]
}
