test/rules/single_criterion/high_risk_service_account/risky_role_exec_into_container/rule.json
{
    "rules": [
        {
            "category": "Kubernetes",
            "cfg_type": "user_created",
            "comment": "",
            "containers": [
                "containers"
            ],
            "criteria": [
                {
                    "name": "saBindRiskyRole",
                    "op": "containsTagAny",
                    "path": "saBindRiskyRole",
                    "value": "risky_role_exec_into_container"
                }
            ],
            "critical": false,
            "disable": false,
            "id": 1000,
            "rule_mode": "protect",
            "rule_type": "deny"
        }
    ]
}
